# tauri-solid

./: .eslintignore  .gitignore  .gitpod.temp.yaml  .globals.d.ts  .npmignore  .prettierrc.yaml  package.json  pnpm-lock.yaml  tailwind.config.js  test.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yaml
config/: .version.js  cargo.js  constants.js  node.js  version.js
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/commands/: _env.ts  greet.command.ts  index.ts
src/components/atoms/: Image.tsx  Logo.tsx  NameInput.tsx  Submit.tsx  index.ts
src/components/layouts/: layout.tsx
src/components/organisms/: Logos.tsx  NameForm.tsx
src/components/pages/: Home.hook.ts  Home.page.tsx
src/components/templates/: Home.tsx
src/helpers/: getSubmitEntries.ts  index.ts
