[package]
name = "tauri-solid"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies.tauri-build]
version = "1.0.0"
features = [ ]

[dependencies]
serde_json = "1.0"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "1.0.8"
  features = [ "api-all" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
